--- a/javascript/effect/mouseEffect02.html
+++ b/javascript/effect/mouseEffect02.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>마우스 이펙트01</title>
+    <title>마우스 이펙트02</title>
     <link rel="stylesheet" href="../assets/css/mouse.css" />
     <link rel="stylesheet" href="../assets/css/dracula.css" />
     <link
@@ -22,7 +22,7 @@
         flex-direction: column;
         color: #fff;
         overflow: hidden;
-        cursor: none;
+        /* cursor: none; */
       }
 
       .mouse__wrap p {
@@ -93,15 +93,6 @@
         transform: scale(5);
         border-radius: 0;
       }
-
-      .mouse__info {
-        position: absolute;
-        left: 20px;
-        bottom: 10px;
-        font-size: 14px;
-        line-height: 1.6;
-        color: #fff;
-      }
       @media (max-width: 800px) {
         .mouse__wrap p {
           padding: 0 20px;
@@ -122,10 +113,10 @@
   <body class="img02">
     <header id="header">
       <h1>Javascript Mouse Effect01</h1>
-      <p>마우스 이펙트 - 마우스 따라다니기</p>
+      <p>마우스 이펙트 - 마우스 따라다니기(GSAP)</p>
       <ul>
-        <li class="active"><a href="mouseEffect01.html">1</a></li>
-        <li><a href="mouseEffect02.html">2</a></li>
+        <li><a href="mouseEffect01.html">1</a></li>
+        <li class="active"><a href="mouseEffect02.html">2</a></li>
         <li><a href="mouseEffect03.html">3</a></li>
         <li><a href="mouseEffect04.html">4</a></li>
         <li><a href="mouseEffect05.html">5</a></li>
@@ -137,37 +128,26 @@
     <main id="main">
       <section id=" mouseType">
         <div class="mouse__cursor"></div>
+        <div class="mouse__cursor"></div>
+
         <div class="mouse__wrap">
           <p>
-            <span class="style1">가능</span>해 보이는 것 혹은
-            <span class="style4">타당</span>해 보이는 것만<br />
+            <span class="style1">가능</span>해 보이는 것
+             혹은 
+             <span class="style4">타당</span>해 보이는 것만<br />
             선택한다면 스스로가
             <span class="style2"> 진정 원하는 것</span>을<br />
-            알 수 없고 <span class="style3">타협</span>만 남는다..
+           알 수 없고  <span class="style3">타협</span>만 남는다..
           </p>
           <p>
-            If you limit <span class="style6"> your choices</span> only to what
-            seems <span class="style4">possible or reasonable</span>, <br />you
-            disconnect your self from<span class="style5">
-              what you truly want</span
-            >,<br />
-            and all that is left is <span class="style6">a compromise..</span>
+           If you limit  <span class="style6"> your choices</span
+            > only to what seems <span class="style4">possible or reasonable</span>,
+            <br />you disconnect your self from<span class="style5"> what you truly want</span>,<br />
+            and all that is left is  <span class="style6">a compromise..</span>
           </p>
         </div>
       </section>
-      <div class="mouse__Info">
-        <ul>
-          <li>clientX : <span class="clientX">0</span>px</li>
-          <li>clientY : <span class="clientY">0</span>px</li>
-          <li>offsetX : <span class="offsetX">0</span>px</li>
-          <li>offsetY : <span class="offsetY">0</span>px</li>
-          <li>pageX : <span class="pageX">0</span>px</li>
-          <li>pageY : <span class="pageY">0</span>px</li>
-          <li>screenX : <span class="screenX">0</span>px</li>
-          <li>screenY : <span class="screenY">0</span>px</li>
-        </ul>
-      </div>
-    </main>
+     
     <!-- //main -->
 
     <footer id="footer">
